refactor: use pattern matching for instanceof and simplify map creation